# nexusai

./: .env.example  .gitignore  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml  test_ai_service.py  test_auth_service.py  test_security.py
backend/app/: main.py
backend/app/agents/: coding_agent.py  critic_agent.py  final_response_agent.py  graph.py  rag_node.py  research_agent.py  revision_node.py  router_agent.py  state.py  summarization_agent.py  writing_agent.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  chat.py  chat_ws.py  documents.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: ac2013a6612b_create_documents_table.py  ccc704e7cb7d_create_users_table.py  ed616a5f5846_create_conversations_and_messages_tables.py
backend/app/models/: conversation.py  document.py  message.py  user.py
backend/app/rag/: chunker.py  embedder.py  extractor.py  retriever.py
backend/app/repositories/: base.py  conversation_repository.py  document_repository.py  message_repository.py  user_repository.py
backend/app/schemas/: auth.py  chat.py  conversation.py  document.py  user.py
backend/app/services/: ai_service.py  auth_service.py  chat_service.py  document_service.py  vector_service.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AuthInitializer.tsx
frontend/src/lib/: api.ts
(+9 files in other folders)
